fixed vh of market__body not showing correcctly for phones

--- a/src/index.css
+++ b/src/index.css
@@ -583,7 +583,7 @@ NEWCARMARKET
   display: flex;
   flex: 1 1;
   flex-direction: column;
-  height: 300vh;
+  height: 333vh;
   background-color: #171a20;
 }
 .market__main {
